
syntax = "proto3";
// system_notify_message 站内信消息表
package notify;
option go_package = "cloud/service/system/notify;notify";
import "google/protobuf/timestamp.proto";
import "pagination.proto";

// SystemNotifyMessageObject 数据对象
message SystemNotifyMessageObject {
	// @inject_tag: db:"id" json:"id"
	optional int64 id = 1; //消息
	// @inject_tag: db:"user_id" json:"userId"
	optional int64 user_id = 2; //用户id
	// @inject_tag: db:"user_type" json:"userType"
	optional int32 user_type = 3; //用户类型
	// @inject_tag: db:"template_id" json:"templateId"
	optional int64 template_id = 4; //模版编号
	// @inject_tag: db:"template_code" json:"templateCode"
	optional string template_code = 5; //模板编码
	// @inject_tag: db:"template_nickname" json:"templateNickname"
	optional string template_nickname = 6; //模版发送人名称
	// @inject_tag: db:"template_content" json:"templateContent"
	optional string template_content = 7; //模版内容
	// @inject_tag: db:"template_type" json:"templateType"
	optional int32 template_type = 8; //模版类型
	// @inject_tag: db:"template_params" json:"templateParams"
	optional bytes template_params = 9; //模版参数
	// @inject_tag: db:"read_status" json:"readStatus"
	optional int32 read_status = 10; //是否已读
	// @inject_tag: db:"read_time" json:"readTime"
	google.protobuf.Timestamp read_time = 11; //阅读时间
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 12; //删除
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 13; //租户
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 14; //创建人
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 15; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 16; //更新人
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 17; //更新时间
}
// SystemNotifyMessageTotalResponse 列表数据总量
message SystemNotifyMessageTotalResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemNotifyMessageCreateRequest 创建数据请求
message SystemNotifyMessageCreateRequest {
	SystemNotifyMessageObject data = 1;
}
// SystemNotifyMessageCreateResponse 创建数据响应
message SystemNotifyMessageCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemNotifyMessageUpdateRequest 更新数据请求
message SystemNotifyMessageUpdateRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //消息
	SystemNotifyMessageObject data = 2;
}
// SystemNotifyMessageUpdateResponse 更新数据响应
message SystemNotifyMessageUpdateResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemNotifyMessageDeleteRequest 删除数据请求
message SystemNotifyMessageDeleteRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //消息
}
// SystemNotifyMessageDeleteResponse 删除数据响应
message SystemNotifyMessageDeleteResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemNotifyMessageRequest 查询单条数据请求
message SystemNotifyMessageRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //消息
}
// SystemNotifyMessageResponse 查询单条数据响应
message SystemNotifyMessageResponse {
	int64 code = 1;
	string msg = 2;
	SystemNotifyMessageObject data = 3;
}
// SystemNotifyMessageRecoverRequest 恢复数据请求
message SystemNotifyMessageRecoverRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //消息
}
// SystemNotifyMessageRecoverResponse 删除数据响应
message SystemNotifyMessageRecoverResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemNotifyMessageListRequest 列表数据
message SystemNotifyMessageListRequest {
	
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 2; // 删除
	// @inject_tag: db:"template_type" json:"templateType"
	optional int32 template_type = 3; // 模版类型
	// @inject_tag: db:"read_status" json:"readStatus"
	optional int32 read_status = 4; // 是否已读
	// @inject_tag: db:"begin_read_time" json:"beginReadTime"
	google.protobuf.Timestamp begin_read_time = 5; // 阅读开始时间
	// @inject_tag: db:"finish_read_time" json:"finishReadTime"
	google.protobuf.Timestamp finish_read_time = 6; // 阅读结束时间

	// @inject_tag: db:"pagination" json:"pagination"
	optional pagination.PaginationRequest pagination = 7; // 分页
}

// SystemNotifyMessageListResponse 数据响应
message SystemNotifyMessageListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated SystemNotifyMessageObject data = 3;
}
// SystemNotifyMessageListTotalRequest 列表数据
message SystemNotifyMessageListTotalRequest {
	
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 2; // 删除
	// @inject_tag: db:"template_type" json:"templateType"
	optional int32 template_type = 3; // 模版类型
	// @inject_tag: db:"read_status" json:"readStatus"
	optional int32 read_status = 4; // 是否已读
	// @inject_tag: db:"begin_read_time" json:"beginReadTime"
	google.protobuf.Timestamp begin_read_time = 5; // 阅读开始时间
	// @inject_tag: db:"finish_read_time" json:"finishReadTime"
	google.protobuf.Timestamp finish_read_time = 6; // 阅读结束时间

}


// SystemNotifyMessageService 服务
service SystemNotifyMessageService{
	rpc SystemNotifyMessageCreate(SystemNotifyMessageCreateRequest) returns (SystemNotifyMessageCreateResponse);
	rpc SystemNotifyMessageUpdate(SystemNotifyMessageUpdateRequest) returns (SystemNotifyMessageUpdateResponse);
	rpc SystemNotifyMessageDelete(SystemNotifyMessageDeleteRequest) returns (SystemNotifyMessageDeleteResponse);
	rpc SystemNotifyMessage(SystemNotifyMessageRequest) returns (SystemNotifyMessageResponse);
	rpc SystemNotifyMessageRecover(SystemNotifyMessageRecoverRequest) returns (SystemNotifyMessageRecoverResponse);
	rpc SystemNotifyMessageList(SystemNotifyMessageListRequest) returns (SystemNotifyMessageListResponse);
	rpc SystemNotifyMessageListTotal(SystemNotifyMessageListTotalRequest) returns (SystemNotifyMessageTotalResponse);
}